--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
       <div class="view">
-        <img class="d-block w-100" src="../img/joseph-barrientos-4qSb_FWhHKs-unsplash.jpg" alt="Second slide"
+        <img class="d-block w-100" src="https://i.pinimg.com/236x/c6/80/b9/c680b9dbe0b07107a99823507c5a49f9.jpg" alt="Second slide"
         style="width: 500px;height: 500px;">     
       </div>
       <div class="carousel-caption">
@@ -22,7 +22,7 @@
     <div class="carousel-item">
       <!--Mask color-->
       <div class="view">
-        <img class="d-block w-100" src="../img/stephan-schmid-Xfd-PHwqkRc-unsplash.jpg" alt="First slide" style="width: 500px;height: 500px;">
+        <img class="d-block w-100" src="https://i.pinimg.com/236x/05/43/ba/0543ba35d9b310eb0470351f6ea0b4f8.jpg" alt="First slide" style="width: 500px;height: 500px;">
         <div class="mask rgba-black-light"></div>
         <div class="mask rgba-black-strong"></div>
       </div>
@@ -34,7 +34,7 @@
     <div class="carousel-item">
       <!--Mask color-->
       <div class="view">
-        <img class="d-block w-100" src="../img/revolt-164_6wVEHfI-unsplash.jpg" alt="Third slide"
+        <img class="d-block w-100" src="https://i.pinimg.com/236x/10/9b/1d/109b1d45515b61b076f3f830879e1b56.jpg" alt="Third slide"
           style="width: 500px;height: 500px;">
         <div class="mask rgba-black-slight"></div>
       </div>
