--- a/templates/home.html
+++ b/templates/home.html
@@ -173,7 +173,7 @@
     <br><br><br>
     <div class="row" style="margin-top: 30px;">
       <div class="col-md-6 col-xs-12 text-center" style="margin-bottom: 100px;">
-        <img src="../img/revolt-164_6wVEHfI-unsplash.jpg" style="width: 100%;border-radius: 50%;" alt="">
+        <img src="https://i.pinimg.com/236x/10/9b/1d/109b1d45515b61b076f3f830879e1b56.jpg" style="width: 100%;border-radius: 50%;" alt="">
       </div>
       <div class="col-md-6 col-xs-12 text-center">
         <p class="outer"><i class="fa fa-magic"></i> <span class="why font-weight-bold"> Best Brands</span></p>
