--- a/templates/home.html
+++ b/templates/home.html
@@ -374,7 +374,7 @@
 
     <!-- Card image -->
     <div class="view overlay my-4">
-      <img src="../img/revolt-164_6wVEHfI-unsplash.jpg" style="width: 100%;height: 400px;" class="img-fluid" alt="">
+      <img src="https://i.pinimg.com/236x/10/9b/1d/109b1d45515b61b076f3f830879e1b56.jpg" style="width: 100%;height: 400px;" class="img-fluid" alt="">
       <a href="#">
         <div class="mask rgba-white-slight"></div>
       </a>
