--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
       <div class="view">
-        <img class="d-block w-100" src="https://i.pinimg.com/236x/c6/80/b9/c680b9dbe0b07107a99823507c5a49f9.jpg" alt="Second slide"
+        <img class="d-block w-100" src="https://images.unsplash.com/photo-1460353581641-37baddab0fa2?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8c2hvZXN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Second slide"
         style="width: 500px;height: 500px;">     
       </div>
       <div class="carousel-caption">
@@ -22,7 +22,7 @@
     <div class="carousel-item">
       <!--Mask color-->
       <div class="view">
-        <img class="d-block w-100" src="https://i.pinimg.com/236x/05/43/ba/0543ba35d9b310eb0470351f6ea0b4f8.jpg" alt="First slide" style="width: 500px;height: 500px;">
+        <img class="d-block w-100" src="https://images.unsplash.com/photo-1548801133-da353ebb1d97?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzN8fHNob2VzfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="First slide" style="width: 500px;height: 500px;">
         <div class="mask rgba-black-light"></div>
         <div class="mask rgba-black-strong"></div>
       </div>
@@ -34,7 +34,7 @@
     <div class="carousel-item">
       <!--Mask color-->
       <div class="view">
-        <img class="d-block w-100" src="https://i.pinimg.com/236x/10/9b/1d/109b1d45515b61b076f3f830879e1b56.jpg" alt="Third slide"
+        <img class="d-block w-100" src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OXx8c2hvZXN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Third slide"
           style="width: 500px;height: 500px;">
         <div class="mask rgba-black-slight"></div>
       </div>
@@ -173,7 +173,7 @@
     <br><br><br>
     <div class="row" style="margin-top: 30px;">
       <div class="col-md-6 col-xs-12 text-center" style="margin-bottom: 100px;">
-        <img src="https://i.pinimg.com/236x/10/9b/1d/109b1d45515b61b076f3f830879e1b56.jpg" style="width: 100%;border-radius: 50%;" alt="">
+        <img src=https://images.unsplash.com/photo-1542291026-7eec264c27ff?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OXx8c2hvZXN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" style="width: 80%;border-radius: 40%;" alt="">
       </div>
       <div class="col-md-6 col-xs-12 text-center">
         <p class="outer"><i class="fa fa-magic"></i> <span class="why font-weight-bold"> Best Brands</span></p>
@@ -374,7 +374,7 @@
 
     <!-- Card image -->
     <div class="view overlay my-4">
-      <img src="https://i.pinimg.com/236x/10/9b/1d/109b1d45515b61b076f3f830879e1b56.jpg" style="width: 100%;height: 400px;" class="img-fluid" alt="">
+      <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OXx8c2hvZXN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" style="width: 100%;height: 400px;" class="img-fluid" alt="">
       <a href="#">
         <div class="mask rgba-white-slight"></div>
       </a>
